--- a/pandora/dutycycle.tex
+++ b/pandora/dutycycle.tex
@@ -1,16 +1,70 @@
 
-Determining the duty cycle for Pandora
+%%% Latex preamble
+\documentclass[11pt]{article}
+\oddsidemargin 0pt
+\textwidth 6.5in
+\topmargin -0.65in
+\textheight 9.25in
+
+\usepackage{epsfig}
+\usepackage{natbib}
+\usepackage{amsmath, mathrsfs,amsfonts,amssymb}
+
+%Get the citation punctuation correct
+\bibpunct{(}{)}{;}{a}{}{,}
+
+%Set the space between paragraphs.
+%Uncomment this for single spacing, comment for double spacing
+\setlength{\parskip}{1.0ex plus0.5ex minus0.2ex}
+
+%Allow colour in your output (pdf only?)
+% \usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
+% \definecolor{darkgreen}{rgb}{0,.5,0}  %For example
+%%%End of preamble
+
+\newcommand{\Plwr}{\ensuremath{P_{\mathrm{lwr}}}}
+\newcommand{\Pupr}{\ensuremath{P_{\mathrm{upr}}}}
+\renewcommand{\hat}[1]{\ensuremath{\vec{#1}}}
+\newcommand{\vareps}{\varepsilon}
+
+\begin{document}
+\begin{center}
+\begin{Huge} Determining the duty cycle for Pandora \end{Huge}
+\end{center}
+
 
 Pandora will be launched into a low Earth orbit, aligned so the spacecraft orbits in a plane roughly perpendicular the direction from the Earth to the sun. The duty cycle for a celestial object (e.g. a star) is the fraction of time that object is observable by Pandora and not obscured by the Earth, or the sun. The duty cycle depends on the star staying within both the Earth avoidance cone, and the sun avoidance cone.
 
 
 \section{Calculating duty cycle due to Earth avoidance}
 Let \hat{t} be the unit vector from the centre of the Earth to the telescope.
-Let \hat{s} be the unit vector from the centre of the coorinate system to the target star. Assume the star is at infinity, so we don't have to adjust \hat{s} for the exact location of the Earth.
+Let \hat{s} be the unit vector from the centre of the coordinate system (the barycentre of the solar system) to the target star. Assume the star is at infinity, so we don't have to adjust \hat{s} for the exact location of the Earth.
 
-From the perspective of the telescope, a star is observable if it is near the zenith angle (away from the Earth, or ``up''), and unobservable if it is near the nadir-angle. The telescope (or zenith) vector will of course change as a function of orbital phase.  Let us define a maximum angle away from nadir for which a star is still observable, $\vareps$. The the condition of observability is therefore that $\hat{t} \dot \hat{s} < \cos{\vareps}$.
+From the perspective of the telescope, a star is observable if it is near the zenith angle (away from the Earth, or ``up''), and unobservable if it is near the nadir-angle. The telescope (or zenith) vector will of course change as a function of orbital phase.  Let us define a maximum angle away from nadir for which a star is still observable, $\vareps$. The the condition of observability is therefore that 
 
-If the right ascension and declination are labeled $\lambda, \phi$, respectively, \hat{s} = $ (s_x, s_y, s_z) = (\cos{\lambda} \cos{\phi}, \sin{\lambda} \cos{\phi}, \sin{\phi})$. All that remains is to determine \hat{t}. The telescope vector will vary as a function of both orbital phase of the telescope around the Earth, and the orbital phase of the Earth around the Sun.
+\begin{equation}
+\hat{t} \cdot \hat{s} < \cos{\vareps}
+\end{equation}
+
+
+If the right ascension and declination are labeled $\lambda, \phi$, respectively, 
+\begin{equation}
+\hat{s} 
+= 
+\begin{bmatrix}
+s_x\\
+s_y\\
+s_z\\
+\end{bmatrix}
+= 
+\begin{bmatrix}
+\cos{\lambda} \cos{\phi}\\
+\sin{\lambda} \cos{\phi}\\
+\sin{\phi} \\
+\end{bmatrix}
+\end{equation}
+
+All that remains is to determine \hat{t}. The telescope vector will vary as a function of both orbital phase of the telescope around the Earth, and the orbital phase of the Earth around the Sun.
 
 
 
@@ -22,16 +76,16 @@ Let \hat{e} be the unit vector from the sun to the Earth. Assume, for the sake o
 
 where $\alpha$ is the Earth orbital phase angle, which varies between 0 and $2\pi$ over the course of a year.
 
-Call the plane of the telescope's orbit around the Earth uv. We seek basis vectors within the uv-plane that we can project the telescope vector onto.
-Let \hat{u} and \hat{v} be two vectors in the plane uv such that the vectors \hat{u}, \hat{v} and \hat{t} are all perpendicular and satisfy the right hand rule. We further arbitrarily define \hat{v} = (0,0,1). Then
+Call the plane of the telescope's orbit around the Earth {\bf uv}. We seek basis vectors within the {\bf uv}-plane that we can project the telescope vector onto.
+Let \hat{u} and \hat{v} be two vectors in the plane {\bf uv} such that the vectors \hat{u}, \hat{v} and \hat{t} are all perpendicular and satisfy the right hand rule. We further arbitrarily\footnote{It is tempting to think of this is the condition that sets the orbital plane, but it just sets the direction of ``up'' in the plane.} define \hat{v} = (0,0,1)$^\intercal$. Then
 
-\begin{equation}
-\hat{e} = \hat{u} \cross \hat{v}
+\begin{eqnarray}
+\hat{e} &=& \hat{u} \times \hat{v} \\
+\Rightarrow \hat{u} &=& \hat{v} \times \hat{u} \\
+\Rightarrow \hat{u} &=& (-\sin{\alpha}, \cos{\alpha}, 0)^\intercal
+\end{eqnarray}
 
-\doublearrow \hat{u} = \hat{v} \cross \hat{u}
 
-\doublearrow \hat{u} = (-\sin{\alpha}, \cos{\alpha}, 0)
-\end{equation}
 
 If we assume a circular orbit for the telescope around the Earth, we can write 
 
@@ -40,12 +94,26 @@ If we assume a circular orbit for the telescope around the Earth, we can write
 \end{equation}
 
 %Want vertical vectors here
-where $\rho$ is the telescope's orbital phase. We can then convert \hat{t} into ecliptic plane coordinates as \hat{t} = {\hat{t} \hat{x}, \hat{t} \hat{y}, \hat{t} \hat{z} = 
-$( -\sin{\alpha} \cos{\rho}, \cos{\alpha}, \cos{\rho}, \sin{\rho})$
+where $\rho$ is the telescope's orbital phase. We can then convert \hat{t} into ecliptic plane coordinates as 
 
-
+\begin{equation}
+\hat{t} = 
+    \begin{bmatrix}
+    \hat{t} \cdot \hat{x} \\
+    \hat{t} \cdot \hat{y} \\
+    \hat{t} \cdot  \hat{z}
+    \end{bmatrix} 
+    =
+    \begin{bmatrix}
+    -\sin{\alpha} \cos{\rho} \\
+    \cos{\alpha}, \cos{\rho} \\
+    \sin{\rho})
+    \end{bmatrix}
+\end{equation}
+    
+    
 \subsection{Finding the extrema of observability}
-The points in the orbit where the star comes in and out of observability are given by $\hat{t} \dot \hat{s} = \cos{\vareps}$
+The points in the orbit where the star comes in and out of observability are given by $\hat{t} \cdot \hat{s} = \cos{\vareps}$
 Working through the arithmetic, we end up with
 
 \begin{equation}
@@ -53,11 +121,19 @@ Working through the arithmetic, we end up with
 \end{equation}
 
 Set
-$$
-T_1 = \cos{\alpha} s_y - \sin{\alpha} s_x
-T_2 = s_z
-T_3 = \cos{\vareps}
-$$
+\begin{equation}
+\begin{matrix}
+T_1 \\
+T_2 \\
+T_3 \\
+\end{matrix}
+=
+\begin{matrix}
+\cos{\alpha} s_y - \sin{\alpha} s_x \\
+s_z \\
+\cos{\vareps} \\
+\end{matrix}
+\end{equation}
 
 Then 
 \begin{equation}
@@ -66,9 +142,9 @@ T_1\cos{\rho} = T_3 - T_2 \sin{\rho}  \label{trig}
 
 Squaring both sides, and replacing $\cos^2{\rho}$ with $1 - \sin^2{\rho}$ gives, after a little arithmetic
 
-$$
+\begin{equation}
 (T_1^2 + T_2^2) \sin^2{\rho} - 2T_1 T_2 \sin{\rho} + (T_3^2 - T_1^2) = 0
-$$
+\end{equation}
 
 We can solve this quadratic equation to obtain two values for $\sin{\rho}$, the max and min orbital phase that a star can be observed at. Note that if a star is either continuously observable, or never observable, this equation will have no solutions, and we'll need to treat that separately.
 
@@ -83,3 +159,5 @@ $$
 $$
 
 If we solve for both $\sin{\rho}$ and $\cos{\rho}$, we can figure out the correct quadrant for $\rho$.
+
+\end{document}
